<resources>
    <string name="app_name">TheFeriWala</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="bold_font">fonts/Roboto-Bold.ttf</string>
    <string name="medium_font">fonts/Roboto-Medium.ttf</string>
    <string name="regular_font">fonts/Roboto-Regular.ttf</string>
    <string name="todaysdeal">Todays Deal</string>
    <string name="viewall">View All</string>
    <string name="pleasewait">Please wait...</string>
    <string name="addtocart">Add to cart</string>
    <string name="gotocart">Go to cart</string>
    <string name="hint_email">Enter Email Id</string>
    <string name="hint_password">Enter password</string>
    <string name="hint_newpassword">Enter new password</string>
    <string name="hint_name">Name</string>
    <string name="hint_phone">Enter Phone number</string>
    <string name="forgotpassword">Forgot Password?</string>
    <string name="donthaveaccount">Don\'t have an account?</string>
    <string name="signup">Sign Up</string>
    <string name="areadyaccount">Already have an account?</string>
    <string name="login">Login</string>
    <string name="resetpswd">Reset Password</string>
    <string name="checkout">Checkout</string>
    <string name="hint_address">Delivery Address</string>
    <string name="hint_locality">Locality</string>
    <string name="hint_city">City</string>
    <string name="hint_pincode">Pin Code</string>
    <string name="proceedtopay">Proceed To Pay</string>
    <string name="hint_state">State</string>
    <string name="tanksmessae">Thanks for Ordering \n we have received your order</string>
    <string name="myorder">Go to my order</string>
    <string name="searchproduct">Search Product</string>
    <string name="maps_api_key">AIzaSyDSGXRIo3zpPVkxznY3V1a_tm3jPrNsVdA</string>
    <string name="text_contact_address">Contact Address</string>
    <string name="text_contact_mobile">Mobile</string>
    <string name="text_contact_email">Email</string>
</resources>
