<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="53dp"
        android:background="@mipmap/ic_launcher_round" />
<android.support.v7.widget.CardView
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    card_view:cardElevation="3dp"
    card_view:cardCornerRadius="4dp"
    card_view:cardUseCompatPadding="true"
    android:layout_margin="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        >
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                fontPath="@string/regular_font"
                tools:ignore="MissingPrefix"/>

        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:singleLine="true"
                fontPath="@string/regular_font"
                tools:ignore="MissingPrefix"/>

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgotpassword"
            android:gravity="center|right"
            android:textAllCaps="true"
            android:layout_marginTop="15dp"
            fontPath="@string/regular_font"
            tools:ignore="MissingPrefix"
            android:textColor="@color/colorPrimary"/>

        <Button
            android:id="@+id/text_login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/rounded_corner_login"
            android:textSize="18sp"
            android:textColor="@color/text_app_black"
            android:text="@string/login"
            fontPath="@string/medium_font"
            tools:ignore="MissingPrefix"
            android:layout_marginTop="20dp"/>
        <LinearLayout
            android:id="@+id/signup"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center|right">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_app_black"
                android:text="@string/donthaveaccount"
                fontPath="@string/medium_font"
                tools:ignore="MissingPrefix"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:text="@string/signup"
                android:textAllCaps="true"
                fontPath="@string/regular_font"
                tools:ignore="MissingPrefix"
                android:layout_marginLeft="10dp"/>
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>



</RelativeLayout>