<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include
        android:id="@+id/toptool"
        layout="@layout/toolbar"/>
    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        card_view:cardElevation="3dp"
        card_view:cardCornerRadius="4dp"
        card_view:cardUseCompatPadding="true"
        android:layout_margin="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/margin_25"
            android:layout_marginRight="@dimen/margin_25"
            android:layout_marginTop="@dimen/margin_20"
            android:layout_marginBottom="10dp">
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_address"
                    android:imeOptions="actionNext"
                    android:singleLine="true"
                    fontPath="@string/regular_font"
                    tools:ignore="MissingPrefix"/>

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_city"
                    android:imeOptions="actionNext"
                    android:singleLine="true"
                    fontPath="@string/regular_font"
                    tools:ignore="MissingPrefix"/>

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/input_state"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_state"
                    android:imeOptions="actionNext"
                    android:singleLine="true"
                    fontPath="@string/regular_font"
                    tools:ignore="MissingPrefix"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_pincode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_pincode"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:maxLength="6"
                    android:singleLine="true"
                    fontPath="@string/regular_font"
                    tools:ignore="MissingPrefix"/>

            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/button_signup"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/rounded_corner_login"
                android:textSize="18sp"
                android:textColor="@color/text_app_black"
                android:text="@string/checkout"
                fontPath="@string/medium_font"
                tools:ignore="MissingPrefix"
                android:layout_marginTop="20dp"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>