<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include
        layout="@layout/toolbar"/>
    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        card_view:cardElevation="3dp"
        card_view:cardCornerRadius="4dp"
        card_view:cardUseCompatPadding="true"
        android:layout_margin="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp">
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    fontPath="@string/regular_font"
                    tools:ignore="MissingPrefix"/>

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_newpassword"
                    android:inputType="textPassword"
                    android:singleLine="true"

                    android:imeOptions="actionNext"
                    fontPath="@string/regular_font"
                    tools:ignore="MissingPrefix"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    fontPath="@string/regular_font"
                    tools:ignore="MissingPrefix"/>

            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/text_login"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/rounded_corner_login"
                android:textSize="18sp"
                android:textColor="@color/text_app_black"
                android:text="@string/resetpswd"
                fontPath="@string/medium_font"
                tools:ignore="MissingPrefix"
                android:layout_marginTop="20dp"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>