<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/text_app_blue"
        android:text="@string/tanksmessae"
        android:gravity="center"
        fontPath="@string/medium_font"
        tools:ignore="MissingPrefix"
        android:textSize="@dimen/margin_18"/>

    <TextView
        android:id="@+id/myorderText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/margin_20"
        android:textColor="@color/text_app_blue"
        android:layout_marginTop="@dimen/margin_20"
        android:gravity="center"
        fontPath="@string/medium_font"
        tools:ignore="MissingPrefix"
        android:layout_marginBottom="@dimen/margin_20"/>
    <Button
        android:id="@+id/myorderButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_50"
        android:background="@drawable/rounr_addtocart"
        android:layout_margin="@dimen/margin_20"
        android:textColor="@color/text_app_blue"
        android:textSize="@dimen/margin_18"
        fontPath="@string/medium_font"
        tools:ignore="MissingPrefix"
        android:text="@string/myorder"
        android:textAllCaps="true"/>
</LinearLayout>