<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include
        android:id="@+id/toptool"
        layout="@layout/toolbar"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/margin_10">
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="@dimen/margin_10">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_contact_address"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/colorPrimary"
                    android:layout_marginTop="@dimen/margin_5"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="B-70, FLOOR 2ND, DOUBLE STOREY, NEAR RAMESH NAGAR METRO STATION, DELHI-110015"
                    android:layout_marginTop="@dimen/margin_10"
                    android:textColor="@color/prod_name_text_color"
                    android:textSize="@dimen/text_16"/>

            </LinearLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="@dimen/margin_10">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_contact_mobile"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/colorPrimary"
                    android:layout_marginTop="@dimen/margin_5"/>

                <TextView
                    android:id="@+id/call"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="+91-8797404100"
                    android:layout_marginTop="@dimen/margin_10"
                    android:textColor="@color/prod_name_text_color"
                    android:textSize="@dimen/text_16"/>

            </LinearLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="@dimen/margin_10">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_contact_email"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/colorPrimary"
                    android:layout_marginTop="@dimen/margin_5"/>

                <TextView
                    android:id="@+id/mail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="contact@theferiwala.com"
                    android:layout_marginTop="@dimen/margin_10"
                    android:textColor="@color/prod_name_text_color"
                    android:textSize="@dimen/text_16"/>

            </LinearLayout>
        </android.support.v7.widget.CardView>
    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.MapFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       android:layout_marginTop="@dimen/margin_10" />
    </LinearLayout>
</LinearLayout>